[FLINK-39232] Modify Transform rules applying logic to first match only